2003-08-14  Sam Steingold  <sds@gnu.org>

	* modules/netica/wrap.lisp (adjust-number-of-states): new function
	(GetNodeLevels): new wrapper
	(error-message, node-info): use ENUM-FROM-VALUE
	(net-info): call GetNetNodes and print all nodes
	(make-node): allow setting levels and creating continuous nodes
	(save-net): call TRANSLATE-LOGICAL-PATHNAME before NAMESTRING
	* modules/netica/demo.lisp: call net-info
	* modules/netica/netica.lisp: fixed some declarations

2003-08-13  Sam Steingold  <sds@gnu.org>

	You can now map between numeric and symbolic C enum values using
	functions FFI:ENUM-FROM-VALUE and FFI:ENUM-TO-VALUE
	* foreign1.lisp (enum-from-value, enum-to-value): new functions
	(def-c-enum): save the value -> constant name map in a hash-table

2003-08-13  Sam Steingold  <sds@gnu.org>

	do FUNCTION-CODES lookup at load time: a change in FUNCTION-CODES
	means a change in FUNTAB, i.e., all FAS recompilation anyway
	* compiler.lisp (CALLS-code-fun): new macro
	(c-FNODE-FUNCTION, c-FUNCTION, insert-combined-LAPs): use it

2003-08-13  Bruno Haible  <bruno@clisp.org>

	* arilev1e.d (and_test_loop_up, test_loop_up): Change return type from
	'bool' to 'int', for compatibility with the existing assembly code.
	* arilev1c.d (and_test_loop_up, test_loop_up): Likewise.
	* arilev1i.d (and_test_loop_up, test_loop_up): Likewise.
	Reported by Russ Ross <rgr22@cl.cam.ac.uk>.

2003-08-12  Sam Steingold  <sds@gnu.org>

	* modules/dirkey/dirkey.c, modules/syscalls/calls.c:
	* modules/regexp/regexi.c (misc_encoding, pathname_encoding):
	use GLO to pick the user changes to *MISC-ENCODING*
	and *PATHNAME-ENCODING* at run time
	* genclisph.d (object_tab): enabled

2003-08-12  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-write-lib): do not write constants; unwrap PROGN
	* init.lisp (LAMBDA-LIST-TO-SIGNATURE) [!COMPILER]: dummy definition
	(defun): call LAMBDA-LIST-TO-SIGNATURE at macroexpand time
	(%expand-macro): new function
	(%expand-form): use it
