@@ -117,6 +117,7 @@ User visible changes
     <SUBTYPEP-ENVIRONMENT:ADD-ARG>, <THE-VALUES:RETURN-NUMBER-RECEIVED>,
     <ADJUST-ARRAY-NOT-ADJUSTABLE:IMPLICIT-COPY>;
   + EQUALP on HASH-TABLEs now correctly descends the structure;
+  + macro definitions now respect the lexical environment;
   + a character is now accepted as a package designator.
   Thanks to Paul F. Dietz <dietz@dls.net> and his ANSI compliance
   suite, which helped detect some of these deficiencies.
